# Detectron2_ros2

./: .gitmodules  LICENSE  README.md  setup.cfg
detectron2_msgs/: CMakeLists.txt  package.xml
detectron2_ros/: detectron2_ros.py  package.xml  setup.py
detectron2_ros/detectron2_ros/: detectron2_ros.py
detectron2_ros/launch/: detectron2_ros.launch.py
