<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detectron2_ros</name>
  <version>0.1.0</version>
  <description>The detectron2_ros package</description>
  <maintainer email="juchajam@gmail.com">juchajam</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/juchajam/Detectron2_ros2</url>
  <author email="davfercha@uma.es">David Fernandez Chaves</author>
  <author email="juchajam@gmail.com">juchajam</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>detectron2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
